get_filename_component: make errors fatal

Make all errors in `get_filename_component` fatal.

Fixes: #20015